discussion/kv_engine/175694/175694_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Don't load and parse json in pwdb

It is better to let the caller load the file and perform
JSON parsing before trying to create the PasswordDatabase.

This simplifies the implementation of the class, and less
things to write unit tests for.

Change-Id: Ib9c661b01624e999ed88b4f25dd40f23e4f2db9f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-03 10:53:31.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-03 11:27:43.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17912/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/pwfile.cc:88:28: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
            nlohmann::json json;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/pwfile.cc:90:34: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
                json = nlohmann::json::parse(content);
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17912/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/pwfile.cc:88:28:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17912/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39159/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cbsasl/pwfile.cc:88:28:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39159/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39159/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18941/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18941/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16963/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46596/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7571/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7675/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19750/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20097/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20752/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28143/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
